[package]
name = "flowlocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
surrealdb-beta = { version = "1.4.0", features = ["kv-mem"] }
once_cell = "1.19.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["v7"] }

chrono = "0.4.38"

# -- REST --
axum = { version = "0.7.5", features = ["macros"] }

# -- JSON
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3"