[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]
resolver = "2"
members = [
    #    "crates/libs/lib-auth",
    #    "crates/libs/lib-rpc",
    "crates/libs/lib-core",
    "crates/libs/lib-utils",
    "crates/apps/api",
    #    "crates/toolsbox/gen-key",
    #    "crates/toolsbox/uuid_gen",
]