[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = { version = "1.8.0", features = ["v7"] }
derive_more = { version = "1.0.0-beta", features = ["from"] }
chrono = { version = "0.4.*", features = ["serde"] }
# -- Mertics
systemstat = "0.2.3"
sysinfo = "0.30.0"
metrics-exporter-prometheus = "0.12.1"
metrics = "0.21.1"
peak_alloc = "0.2.0"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }


opentelemetry = { version = "0.23.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "logs"] }
opentelemetry-stdout = { version = "0.4.0", features = ["logs"] }
opentelemetry-semantic-conventions = { version = "0.15.0" }
opentelemetry-otlp = { version = "0.16.0", features = [
    "http-proto",
    "reqwest-client",
    "logs",
] }
opentelemetry-appender-log = { version = "0.4.0", default-features = false }
tower = "0.4"
futures-util = "0.3"
prometheus = "0.13"
lazy_static = "1.5.0"
regex-macro = "0.2.0"
regex = "1.10.6"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"
